codex-rs/core/tests/suite/snapshots/all__suite__scenarios__astra_async_question_and_answer.snap
---
source: core/tests/suite/scenarios.rs
assertion_line: 375
expression: "context_snapshot::format_context_snapshot(\"Astra uses the catalog question schema to ask who a launch update is for, keeps working, and receives the user's answer in the active turn.\",\n&entries, &ContextSnapshotOptions::default().rewrite_known_segments(),)"
---
Scenario: Astra uses the catalog question schema to ask who a launch update is for, keeps working, and receives the user's answer in the active turn.

## Window 1
-- request 1 (request) --
00:additional_tools/developer (3; hash=6f5943a27a1eeab1):
        - namespace/functions; hash=6011e1fe6501d0bf
          - custom/exec
          - function/wait
          - function/request_user_input
          - function/request_user_input_async
        - namespace/clock: Tools for reading and waiting on time.; hash=f402e8c5e9b5e317
          - function/sleep
        - namespace/collaboration: Tools for spawning and managing sub-agents.; hash=b263e3c84ad07c37
          - function/followup_task
          - function/interrupt_agent
          - function/list_agents
          - function/send_message
          - function/spawn_agent
          - function/wait_agent
01:message/developer:
    <MODEL_INSTRUCTIONS>
02:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <COLLABORATION_MODE>
03:message/developer:
    <MULTI_AGENT_ROLE>
04:message/developer:
    <MULTI_AGENT_MODE>
05:message/user:
    <ENVIRONMENT_CONTEXT>
06:message/user:
    Draft a short launch update. Ask me who it is for and keep working while I answer.
-- request 2 (request) --
07:function_call/functions.request_user_input_async:{"questions":[{"options":["Internal team","Customers"],"title":"Who should receive the launch update?"}]}
08:function_call_output:{"accepted":true}
-- request 3 (request) --
09:message/assistant:
    I drafted a short launch update.
10:message/user:
    <send_user_message_question_reply>
    [{"answer":"Customers","question":"Who should receive the launch update?","questionItemId":"[\\"request_user_input_async\\",\\"audience-question\\",0]"}]
    </send_user_message_question_reply>
-- request 4 (request) --
11:message/assistant:
    Here is the launch update for customers.
12:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
13:message/user:
    <ENVIRONMENT_CONTEXT>
14:message/user:
    Now give it an email subject.
